# game_1

./: BattleRenderer_TODO.txt  CMakeLists.txt  CMakePresets.json  PLAN.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_GUIDE.md  TODO.md  USEFUL_COMMANDS.txt  idk  issues  latest_debug_run.txt  refactor2  summary.txt  summaryplan.txt  todo2  todo3  todooo  unitsummary  vcpkg.json
.github/: copilot-instructions.md
game/: CMakeLists.txt
game/assets/audio/: .gitkeep
game/assets/maps/: .gitkeep  0.5H_IsoTiles.tsx  1v1_test.tmj  1v1_test.tmx  test.tiled-session  test_map.tmj  test_map.tmx
game/assets/skills/: fireball.json  slash.json
game/assets/sprites/: .gitkeep
game/assets/units/: .gitkeep  aria.json  soldier.json
game/src/: main.cpp
game/src/ai/: EnemyAI.cpp  EnemyAI.h
game/src/battle/: AttackResolutionController.cpp  AttackResolutionController.h  BattleMap.cpp  BattleMap.h  BattleSession.cpp  BattleSession.h  CombatSystem.cpp  CombatSystem.h  GameTile.h  Grid.cpp  Grid.h  HumanTurnController.cpp  HumanTurnController.h  MovementRange.cpp  MovementRange.h  Pathfinder.cpp  Pathfinder.h  PendingAttackController.cpp  PendingAttackController.h  TurnQueue.cpp  TurnQueue.h  Unit.cpp  Unit.h  UnitData.h  UnitFactory.cpp  UnitFactory.h  UnitProgression.cpp  UnitProgression.h
game/src/config/: BattleCatalog.cpp  BattleCatalog.h  GameConstants.h
game/src/data/: SettingsManager.cpp  SettingsManager.h  SkillLoader.cpp  SkillLoader.h  UnitLoader.cpp  UnitLoader.h
game/src/events/: BattleEventSystem.cpp  BattleEventSystem.h
game/src/renderer/: BattleRenderer.cpp  BattleRenderer.h  BattleRendererContext.h
game/src/scenes/: AudioSettings.cpp  AudioSettings.h  BattleLoader.cpp  BattleLoader.h  BattleState.cpp  BattleState.h  BootState.cpp  BootState.h  GraphicsSettings.cpp  GraphicsSettings.h  MainMenuState.cpp  MainMenuState.h  ResultState.cpp  ResultState.h  SettingsState.cpp  SettingsState.h  WorldMapState.cpp  WorldMapState.h
game/src/states/: AudioSettings.cpp  AudioSettings.h  BattleLoader.cpp  BattleLoader.h  BattleState.cpp  BattleState.h  BootState.cpp  BootState.h  GraphicsSettings.cpp  GraphicsSettings.h  HumanTurnController.cpp  HumanTurnController.h  MainMenuState.cpp  MainMenuState.h  PauseState.cpp  PauseState.h  ResultState.cpp  ResultState.h  SettingsState.cpp  SettingsState.h  WorldMapState.cpp  WorldMapState.h
game/src/systems/: BattleParticipantsBuilder.cpp  BattleParticipantsBuilder.h  CombatAnimationSystem.cpp  CombatAnimationSystem.h  DeploymentSystem.cpp  DeploymentSystem.h  PartyContext.cpp  PartyContext.h  PartySystem.cpp  PartySystem.h  RosterSystem.cpp  RosterSystem.h
game/src/ui/: ActionId.h  ActionMenu.cpp  ActionMenu.h  BattleHud.cpp  BattleHud.h  BattleMenuItem.h  Cursor.cpp  Cursor.h  DamagePreview.cpp  DamagePreview.h  DialogBox.cpp  DialogBox.h  DialogSystem.cpp  DialogSystem.h  FloatingTextSystem.cpp  FloatingTextSystem.h  UIEvent.h  UIManager.cpp  UIManager.h  UIScale.cpp  UIScale.h  UITheme.h  UIUtils.h  UIWindow.h  UnitPanel.cpp  UnitPanel.h  UnitPortrait.cpp  UnitPortrait.h  WindowId.h  unit_portrait.cpp  unit_portrait.h
game/src/ui/windows/: ActionMenuWindow.cpp  ActionMenuWindow.h  ButtonMenuWindow.cpp  ButtonMenuWindow.h  ConfirmWindow.cpp  ConfirmWindow.h  DeploymentWindow.cpp  DeploymentWindow.h  DialogWindow.cpp  DialogWindow.h  InspectWindow.cpp  InspectWindow.h  PartyWindow.cpp  PartyWindow.h  SettingsRowWindow.cpp  SettingsRowWindow.h  UnitInspectWindow.cpp  UnitInspectWindow.h  UnitPanelWindow.cpp  UnitPanelWindow.h
game/src/world/: WorldPathfinding.h
tools/: build_debug.bat  build_release.bat
